# cookie-rs

./: .travis.yml  Cargo.toml  README.md  search-index.js  settings.html
cookie/: all.html  enum.ParseError.html  enum.SameSite.html  index.html  struct.Cookie.html  struct.CookieBuilder.html  struct.CookieJar.html  struct.Delta.html  struct.Iter.html
implementors/core/iter/traits/iterator/: trait.Iterator.js
src/: builder.rs  draft.rs  jar.rs  lib.rs  parse.rs
src/cookie/: builder.rs.html  delta.rs.html  draft.rs.html  jar.rs.html  lib.rs.html  parse.rs.html
src/secure/: key.rs  mod.rs  private.rs  signed.rs
