[package]
name = "cookie2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Sergio Benitez <sb@sergio.bz>", "Douman <douman@gmx.se>"]
version = "0.12.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/DoumanAsh/cookie-rs"
documentation = "https://docs.rs/cookie2"
description = """
Crate for parsing HTTP cookie headers and managing a cookie jar. Supports signed
and private (encrypted + signed) jars.
"""
edition = "2018"

[features]
secure = ["ring", "base64"]
percent-encode = ["url"]

[dependencies]
time = "0.1"
url = { version = "1.0", optional = true }
ring = { version = "0.14.0", optional = true }
base64 = { version = "0.10.0", optional = true }

[package.metadata.docs.rs]
all-features = true
